# thrift-cpp-hello

./: .dockerignore  CMakeLists.txt  Dockerfile.client  Dockerfile.server  README.md
source/: CMakeLists.txt
source/cmd/: CMakeLists.txt
source/cmd/hello-client/: CMakeLists.txt  main.cpp
source/cmd/hello-server/: CMakeLists.txt  main.cpp
source/pkg/: CMakeLists.txt
source/pkg/gen-cpp/: CMakeLists.txt  HelloService.cpp  HelloService.h  HelloService_server.skeleton.cpp  helloservice_constants.cpp  helloservice_constants.h  helloservice_types.cpp  helloservice_types.h
source/pkg/helloservicer/: CMakeLists.txt  helloservicer.cpp  helloservicer.h  helloservicerfactory.cpp  helloservicerfactory.h
tests/: CMakeLists.txt
tests/helloservicer/: CMakeLists.txt  main.cpp
thrift-spec/: helloservice.thrift
